--- a/assets/pages/index.twig
+++ b/assets/pages/index.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block pagetitle %}Homepage{% endblock %}
+{% block pagetitle %}Human Rights Watch{% endblock %}
 
 {% block page %}
   <h1>Welcome on homepage !</h1>
