modification input group et checkbox inline hrw

--- a/assets/sass/layout/form.scss
+++ b/assets/sass/layout/form.scss
@@ -8,13 +8,17 @@ category: Layout - Form
 ---
 
 ```html_example
-<input type="text" class="form-control input-lg" placeholder="Text input"><br>
-<input type="text" class="form-control" placeholder="Text input"><br>
-<input type="text" class="form-control input-sm" placeholder="Text input"><br>
-<input type="text" class="form-control" placeholder="Text input" disabled>
+<input type="text" class="form-control"><br>
+
 ```
 */
 
+.form-control {
+              border-radius: none;
+              background-color:#f2f2f2;
+              border-color:#e8e8e8;
+              width: 330px;
+              height:30px;}
 
 
 /*doc
@@ -71,7 +75,7 @@ category: Layout - Form
 
 ```html_example
 <label class="checkbox-inline">
-  <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+  <input type="checkbox" id="inlineCheckbox" value="option1"> 1
 </label>
 <label class="checkbox-inline">
   <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
@@ -82,6 +86,43 @@ category: Layout - Form
 ```
 */
 
+/*doc
+---
+title: Inline checkboxes HRW
+name: c-inline-checkbox1
+category: Layout - Form
+---
+
+```html_example
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option1"><span>50$</span>
+</label>
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option2"><span>100$</span>
+</label>
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option3"><span>200$</span>
+</label>
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option4"><span>500$</span>
+</label>
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option5"><span>1000$</span>
+</label>
+<label class="checkbox-inline">
+  <input type="radio" class="inlineCheckbox1" name="case" value="option6"><span>autre</span>
+</label>
+```
+*/
+.checkbox-inline span {padding-left:10px;
+                       font-size:10pt;
+                       padding-top:10px}
+.inlineCheckbox1 {
+                  border-radius:none;
+                  height: 20px;
+                  width: 20px;
+                  background-color:#f2f2f2;
+                  }
 
 /*doc
 ---
@@ -266,3 +307,4 @@ category: Layout - Form
 </div>
 ```
 */
+
