--- a/assets/sass/components/breadcrumb.scss
+++ b/assets/sass/components/breadcrumb.scss
@@ -15,3 +15,29 @@ category: Components - Breadcrumb
 </ol>
 ```
 */
+
+/*doc
+---
+title: Breadcrumb hrw
+name: a-breadcrumb2
+category: Components - Breadcrumb
+---
+
+```html_example
+<ol class="breadcrumb breadcrumb2">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Library</a></li>
+  <li class="active">Data</li>
+</ol>
+```
+*/
+
+.breadcrumb2 {
+	background-color: $nav-gray;
+	border-radius:0px;
+	font-size: 11px;
+}
+
+.breadcrumb2 a {
+	color:#ffffff;
+}
