--- a/assets/sass/javascript/dropdown.scss
+++ b/assets/sass/javascript/dropdown.scss
@@ -23,6 +23,29 @@ category: JavaScript - Dropdown
 ```
 */
 
+/*doc
+---
+title: Dropdown hrw
+name: a-dropdown-button2
+category: JavaScript - Dropdown
+---
+
+```html_example
+<div class="btn-group">
+  <button type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+    Action <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu">
+    <li><a href="#">Action</a></li>
+    <li><a href="#">Another action</a></li>
+    <li><a href="#">Something else here</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Separated link</a></li>
+  </ul>
+</div>
+```
+*/
+
 
 
 /*doc
