--- a/assets/sass/components/thumbnails.scss
+++ b/assets/sass/components/thumbnails.scss
@@ -56,3 +56,47 @@ category: Components - Thumbnails
 </div>
 ```
 */
+
+/*doc
+---
+title: Thumbnail hrw
+name: b-custom-content1
+category: Components - Thumbnails
+---
+
+```html_example
+<div class="row">
+  <div class="col-sm-3">
+    <div class="thumbnail">
+           <h3>Thumbnail label</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid enim tanto opus est instrumento in optimis.</p>
+      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
+      <div class="caption">
+      </div>
+    </div>
+  </div>
+</div>
+```
+*/
+
+.thumbnail {
+    border: 0px;
+    border-radius: 4px;
+  }
+img {
+ height:131px;
+  width:197px;
+}
+.thumbnail a > img, .thumbnail > img {
+    height: auto;
+    margin: 0px;
+    max-width: 100%;
+     margin-top:15px;
+  }
+  h3 {
+    font-size: 13px;
+    margin-bottom: 24px;
+}
+  p {
+    font-size: 10px;
+  }
