--- a/assets/sass/hrw.scss
+++ b/assets/sass/hrw.scss
@@ -6,6 +6,7 @@
 @import 'bootstrap';
 
 // LAYOUT ----------------------------------
+@import 'layout/article.scss';
 @import 'layout/buttons.scss';
 @import 'layout/code.scss';
 @import 'layout/form.scss';
