--- a/assets/sass/components/thumbnails.scss
+++ b/assets/sass/components/thumbnails.scss
@@ -100,3 +100,41 @@ img {
   p {
     font-size: 10px;
   }
+
+  /*doc
+---
+title: tumbnail pov work
+name: b-custom-content2
+category: Components - Thumbnails
+---
+
+```html_example
+<div class="row">
+  <div class="col-sm-4">
+    <div class="thumbnail">
+           <img src="img/pov-work.jpg" alt="Some man">
+     </div>
+  </div>
+  
+  <div class="col-sm-3">
+      <h3>ONU : Rétablissement des dispositions protégeant les personnes LGBT contre les exécutions extrajudiciaires</h3>
+    <p class="text">fév 9, 2011<br>
+Fait rarissime, à la suite d'une campagne mondiale de sensibilisation menée par Human Rights Watch, 
+l'Assemblée générale des Nations Unies a revoté la résolution protégeant les personnes des exécutions extrajudiciaires. 
+Grâce à notre campagne de sensibilisation, les votants ont décidé, à une écrasante </p>
+      </div>
+    </div>
+```
+*/
+h3 {font-family: 'Georgia';
+      font-weight: bold;
+      font-size:13px;
+      color:$titles;
+      text-align: justify;
+      margin-bottom:5px;}
+img{height: 193px;
+    width: 290px;}
+
+.text {font-size: 10px;
+      color:#fff;}
+
