--- a/assets/pages/layout.twig
+++ b/assets/pages/layout.twig
@@ -10,10 +10,37 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="../css/stylesheet.css">
+        <link rel="stylesheet" href="../css/hrw.css">
     </head>
     <body>
         {% block page %}{% endblock %}
+        <img src="../img/hrwlogo.png" style="width:110px; height:110px;">
+            <div class="btn-group">
+              <button type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown">
+                Langues <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Anglais</a></li>
+                <li><a href="#">Français</a></li>
+                <li><a href="#">Espagnol</a></li>
+                <li><a href="#">Allemand</a></li>
+                <li><a href="#">Italien</a></li>
+                </ul>
+            </div><br>
+            <div class="headerhrw">
+            <ul class="nav nav-pills nav-justified">
+              <li class="active"><a href="#">Accueil</a></li>
+              <li><a href="#">Nos actions</a></li>
+              <li><a href="#">Actualités</a></li>
+              <li><a href="#">Rapports</a></li>
+              <li><a href="#">Multimédia</a></li>
+              <li><a href="#">A propos</a></li>
+            </ul>
+                <div class="search">
+                <input type="text" class="form-control">
+                <button type="button" class="btn btn-primary">Chercher</button>
+                </div>
+            </div>
         <script src="../js/vendors.min.js"></script>
         <script src="../js/main.min.js"></script>
     </body>
