--- a/assets/sass/hrw.scss
+++ b/assets/sass/hrw.scss
@@ -9,6 +9,7 @@
 @import 'layout/buttons.scss';
 @import 'layout/code.scss';
 @import 'layout/form.scss';
+@import 'layout/header.scss';
 @import 'layout/icons.scss';
 @import 'layout/images.scss';
 @import 'layout/tables.scss';
@@ -44,3 +45,17 @@
 @import 'javascript/scrollspy.scss';
 @import 'javascript/tab.scss';
 @import 'javascript/tooltips.scss';
+
+
+body {
+	width:995px;
+	margin:0 auto;
+
+}
+
+
+
+
+
+
+
