--- a/assets/sass/layout/form.scss
+++ b/assets/sass/layout/form.scss
@@ -18,7 +18,8 @@ category: Layout - Form
               background-color:white;
               border-color:#e8e8e8;
               width: 330px;
-              height:25px;}
+              height:25px;
+}
 
 
 /*doc
