--- a/assets/sass/components/thumbnails.scss
+++ b/assets/sass/components/thumbnails.scss
@@ -98,23 +98,16 @@ category: Components - Thumbnails
   p {
     font-size: 10px;
   }
-<<<<<<< HEAD
-  /*doc
----
-title: Thumbnail hrw2
-=======
 
   /*doc
 ---
-title: tumbnail pov work
->>>>>>> 20ed8b8b0430cca7d866b59814cc619798807e85
+title: Thumbnail multimédia
 name: b-custom-content2
 category: Components - Thumbnails
 ---
 
 ```html_example
 <div class="row">
-<<<<<<< HEAD
   <div class="col-sm-5">
       <div class="thumbnail thumbnailplus">
            <h3>Thumbnail label</h3>
@@ -126,6 +119,31 @@ category: Components - Thumbnails
     </div>
   </div>
 </div>
+```
+*/
+
+  /*doc
+---
+title: Thumbnail impact story
+name: b-custom-content3
+category: Components - Thumbnails
+---
+
+```html_example
+ <div class="col-sm-4">
+    <div class="thumbnail">
+           <img src="img/pov-work.jpg" alt="Some man">
+     </div>
+  </div>
+  
+  <div class="col-sm-3">
+      <h3 class="titlestory">ONU : Rétablissement des dispositions protégeant les personnes LGBT contre les exécutions extrajudiciaires</h3>
+    <p class="text">fév 9, 2011<br>
+Fait rarissime, à la suite d'une campagne mondiale de sensibilisation menée par Human Rights Watch, 
+l'Assemblée générale des Nations Unies a revoté la résolution protégeant les personnes des exécutions extrajudiciaires. 
+Grâce à notre campagne de sensibilisation, les votants ont décidé, à une écrasante </p>
+      </div>
+    </div>
 ```
 */
 
@@ -150,46 +168,25 @@ category: Components - Thumbnails
   display:block;
 }
 
-
-.thumbnail {
-    border: 0px;
-    border-radius: 4px;
-  }
-
 .thumbnailplus a > img, .thumbnailplus > img {
     height: auto;
     margin: 0px;
     max-width: 100%;
-     margin-top:15px;
+    margin-top:15px;
   
   }
-  h3 {
+h3 {
+    font-family: 'Lucida Grande';
     font-size: 13px;
     margin-bottom: 9px;
     font-weight:700;
     color:#fff;
 }
-  p {
+p {
     font-size: 10px;
   }
-=======
-  <div class="col-sm-4">
-    <div class="thumbnail">
-           <img src="img/pov-work.jpg" alt="Some man">
-     </div>
-  </div>
-  
-  <div class="col-sm-3">
-      <h3>ONU : Rétablissement des dispositions protégeant les personnes LGBT contre les exécutions extrajudiciaires</h3>
-    <p class="text">fév 9, 2011<br>
-Fait rarissime, à la suite d'une campagne mondiale de sensibilisation menée par Human Rights Watch, 
-l'Assemblée générale des Nations Unies a revoté la résolution protégeant les personnes des exécutions extrajudiciaires. 
-Grâce à notre campagne de sensibilisation, les votants ont décidé, à une écrasante </p>
-      </div>
-    </div>
-```
-*/
-h3 {font-family: 'Georgia';
+
+.titlestory {font-family: 'Georgia';
       font-weight: bold;
       font-size:13px;
       color:$titles;
@@ -199,6 +196,5 @@ img{height: 193px;
     width: 290px;}
 
 .text {font-size: 10px;
-      color:#fff;}
+      color:$text-courant;}
 
->>>>>>> 20ed8b8b0430cca7d866b59814cc619798807e85
