--- a/assets/pages/index.twig
+++ b/assets/pages/index.twig
@@ -3,4 +3,123 @@
 {% block pagetitle %}Human Rights Watch{% endblock %}
 
 {% block page %}
+<html>
+	<body>
+		<section>
+		<div id="carousel-example-generic-2" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carousel-example-generic-2" data-slide-to="0" class=""></li>
+			    <li data-target="#carousel-example-generic-2" data-slide-to="1" class=""></li>
+			    <li data-target="#carousel-example-generic-2" data-slide-to="2" class="active"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="item">
+			      <img src="http://lorempixel.com/660/250/cats">
+			      <div class="carousel-caption">
+			        <h3>Name of the article</h3>
+			        <p>Short description</p>
+			      </div>
+			    </div>
+			    <div class="item">
+			      <img src="http://lorempixel.com/660/250/cats">
+			      <div class="carousel-caption">
+			        <h3>Name of the article</h3>
+			        <p>Short description</p>
+			      </div>
+			    </div>
+			    <div class="item active">
+			      <img src="http://lorempixel.com/660/250/cats">
+			      <div class="carousel-caption">
+			        <h3>Name of the article</h3>
+			        <p>Short description</p>
+			      </div>
+			    </div>
+			  </div>
+			  <a class="left carousel-control" href="#carousel-example-generic-2" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left"></span>
+			  </a>
+			  <a class="right carousel-control" href="#carousel-example-generic-2" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right"></span>
+			  </a>
+</div>
+		<article class="exemple"> 
+			<h3 class='titre-ex'>Point de vue</h3>
+			<ul class="media-list">
+    			<li class="media">
+			      <h4 class="media-heading"><a href="#">Anneke Van Woudenberg</a></h4>
+			      <div class="media-body mediahrw">
+			        <p>RDC : Pour la première fois, un général congolais est condamné pour viol</p>
+			        <img class="media-object" data-src="holder.js/64x64" alt="60x60" src="http://lorempixel.com/60/60/cats" style="width: 60px; height: 60px;">
+			      </div>
+			    </li>
+  			</ul>
+  			<ul class="media-list">
+    			<li class="media">
+			      <h4 class="media-heading"><a href="#">David Mepham</a></h4>
+			      <div class="media-body mediahrw">
+			        <p>RDC : Pour la première fois, un général congolais est condamné pour viol</p>
+			        <img class="media-object" data-src="holder.js/64x64" alt="60x60" src="http://lorempixel.com/60/60/cats" style="width: 60px; height: 60px;">
+			      </div>
+			    </li>
+  			</ul>
+  			<ul class="media-list">
+    			<li class="media">
+			      <h4 class="media-heading"><a href="#">Eric Goldstein</a></h4>
+			      <div class="media-body mediahrw">
+			        <p>RDC : Pour la première fois, un général congolais est condamné pour viol</p>
+			        <img class="media-object" data-src="holder.js/64x64" alt="60x60" src="http://lorempixel.com/60/60/cats" style="width: 60px; height: 60px;">
+			      </div>
+			    </li>
+  			</ul>
+
+		</article>
+		<article class="exemple"> 
+			<h3 class='titre-ex'>Rapports</h3>
+			<div class="row">
+			  <div class="col-sm-3">
+			    <div class="thumbnail">
+			           <h3>Objectif Likofi</h3>
+			    <p>Meurtres et disparitions forcées aux mains de la police à Kinshasa, République démocratique du Congo</p>
+			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
+			      <div class="caption">
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-3">
+			    <div class="thumbnail">
+			           <h3>"Le pouvoir que ces hommes ont sur nous"</h3>
+			    <p>Exploitation et abus sexuels commis par les forces de l’Union africaine en Somalie</p>
+			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
+			      <div class="caption">
+			      </div>
+			    </div>
+			  </div>
+			  <div class="col-sm-3">
+			    <div class="thumbnail">
+			           <h3>Exploitation sous prétexte d'éducation</h3>
+			    <p>Progrès mitigés dans la lutte contre la mendicité forcée des enfants au Sénégal</p>
+			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
+			      <div class="caption">
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
+			
+		</article>
+		<article class="exemple"> 
+			<h3 class='titre-ex'>Régions</h3>
+			
+			
+		</article>
+
+
+
+		</section>
+		<aside>
+
+		</aside>
+	</body>
+</html>
+
 {% endblock %}
