--- a/assets/sass/hrw.scss
+++ b/assets/sass/hrw.scss
@@ -48,15 +48,38 @@
 @import 'javascript/tooltips.scss';
 
 
+
 body {
 	width:995px;
 	margin:0 auto;
+    background-color:$background-gray;}
 
-}
+section {width: 660px;
+		 height: 500px;
+		 float: left;
+		 }
 
+aside {width: 325px;
+	   height: 400px;
+	   float: right;}
 
+article.rapports{margin-left: 14.5px;
+				 margin-top: 20px;
+				 }
 
+article.onu {
+				 width: 660px;
+				 height: 300px;
+				 background-color: white;}
+.titlestory {font-family: 'Georgia';
+      font-weight: bold;
+      font-size:13px;
+      color:$titles;
+      text-align: justify;
+      margin-bottom:5px;
+  	  width: 200px;}
 
-
-
+.text {font-size: 10px;
+      color:$text-courant;
+  	  width: 200px;}
 
