homepage avancée et détails ajustés

--- a/assets/pages/index.twig
+++ b/assets/pages/index.twig
@@ -76,31 +76,25 @@
 		<article class="exemple"> 
 			<h3 class='titre-ex'>Rapports</h3>
 			<div class="row">
-			  <div class="col-sm-3">
+			  <div class="col-sm-4">
 			    <div class="thumbnail">
 			           <h3>Objectif Likofi</h3>
 			    <p>Meurtres et disparitions forcées aux mains de la police à Kinshasa, République démocratique du Congo</p>
 			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
-			      <div class="caption">
-			      </div>
 			    </div>
 			  </div>
-			  <div class="col-sm-3">
+			  <div class="col-sm-4">
 			    <div class="thumbnail">
-			           <h3>"Le pouvoir que ces hommes ont sur nous"</h3>
+			           <h3>Le pouvoir des hommes</h3>
 			    <p>Exploitation et abus sexuels commis par les forces de l’Union africaine en Somalie</p>
 			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
-			      <div class="caption">
-			      </div>
 			    </div>
 			  </div>
-			  <div class="col-sm-3">
+			  <div class="col-sm-4">
 			    <div class="thumbnail">
-			           <h3>Exploitation sous prétexte d'éducation</h3>
+			           <h3>Exploitation d'éducation</h3>
 			    <p>Progrès mitigés dans la lutte contre la mendicité forcée des enfants au Sénégal</p>
 			      <img src="http://lorempixel.com/300/300/cats" alt="Some cats image">
-			      <div class="caption">
-			      </div>
 			    </div>
 			  </div>
 			</div>
@@ -109,15 +103,40 @@
 		</article>
 		<article class="exemple"> 
 			<h3 class='titre-ex'>Régions</h3>
-			
+			<h3>Séléctionnez la région qui vous intéresse :</h3>
+			<button type="button" class="btn btn-primary btn-lg">AFRIQUE</button>
+			<button type="button" class="btn btn-primary btn-lg">EUROPE</button>
+			<button type="button" class="btn btn-primary btn-lg">AMERIQUES</button><br>
+			<button type="button" class="btn btn-primary btn-lg">ASIE</button>
+			<button type="button" class="btn btn-primary btn-lg">MOYEN-ORIENT</button>
+			<button type="button" class="btn btn-primary btn-lg">ETATS-UNIS</button>
 			
 		</article>
-
+			
 
 
 		</section>
 		<aside>
-
+			<ul class="list-group1">
+			  <li class='list-group-item'>Dernières infos</li>
+			  <li class="list-group-item">
+			  <h4 class="titre"><a href="#">Pays du Golfe : Il faut améliorer la protection
+			     des travailleurs migrants</a></h4>
+			  <p class="text-courant">Les ministres du Travail du Golfe et d’Asie participent à la 3ème réunion 
+			     du Dialogue d’Abou Dabi</p>
+			  <p class="date">23 NOVEMBRE 2014  Communiqué de presse</p>
+			     </li>
+			  <li class="list-group-item"><h4 class="titre"><a href="#">Pays du Golfe : Il faut améliorer la protection
+			     des travailleurs migrants</a></h4>
+			  <p class="text-courant">Les ministres du Travail du Golfe et d’Asie participent à la 3ème réunion 
+			     du Dialogue d’Abou Dabi</p>
+			  <p class="date">23 NOVEMBRE 2014  Communiqué de presse</p></li>
+			  <li class="list-group-item"><h4 class="titre"><a href="#">Pays du Golfe : Il faut améliorer la protection
+			     des travailleurs migrants</a></h4>
+			  <p class="text-courant">Les ministres du Travail du Golfe et d’Asie participent à la 3ème réunion 
+			     du Dialogue d’Abou Dabi</p>
+			  <p class="date">23 NOVEMBRE 2014  Communiqué de presse</p></li>
+			</ul>
 		</aside>
 	</body>
 </html>
