--- a/assets/sass/layout/article.scss
+++ b/assets/sass/layout/article.scss
@@ -44,6 +44,10 @@ article.exemple {
 				padding:5px;
 				}
 
+article h3 {
+  font-size:13px;
+}
+
 .titre-ex {
 	    border-bottom:1px solid $nav-gray;
 	    padding-bottom: 4px;
