--- a/assets/sass/hrw.scss
+++ b/assets/sass/hrw.scss
@@ -51,19 +51,10 @@
 body {
 	width:995px;
 	margin:0 auto;
-
-}
-.thumbmultimedia {
-				float:left;
+	background-color: $background-gray;
 
 }
 
-.sectionmultimedia {
-	background-color:$nav-gray;
-	.thumbnail {
-			background-color:transparent;
-	}
-}
 
 
 
