--- a/assets/pages/layout.twig
+++ b/assets/pages/layout.twig
@@ -41,6 +41,56 @@
                 </div>
             </div>
             {% block page %}{% endblock %}
+            <ol class="breadcrumb breadcrumb2">
+  <li><a href="#">Acceuil</a></li>
+  <li><a href="#">Notre travail</a></li>
+  <li><a href="#">Actualité</a></li>
+  <li><a href="#">Rapport</a></li>
+  <li><a href="#">Multimédia</a></li>
+  <li><a href="#">A propos de</a></li>
+  <li><a href="#">Contact Us</a></li>
+  <li><a href="#">Film festival</a></li>
+  <li><a href="#">Faite un don</a></li>
+</ol>
+            <footer>
+                <article class="exemple">
+                <br> 
+                  <h3 class='titre-foot'>Thèmes</h3>
+                  <div class='row'>
+                  <div class="col-xs-6 col-md-4">
+                  <ul class="list-footer">
+                    <li class="list-footer-item"><a href='#'>Armes</a></li>
+                    <li class="list-footer-item"><a href='#'>Monde de l’entreprise</a></li>
+                    <li class="list-footer-item"><a href='#'>Droits de l’enfant</a></li>
+                    <li class="list-footer-item"><a href='#'>Lutte antiterroriste</a></li>
+                    <li class="list-footer-item"><a href='#'>Droits des personnes handicapées</a></li>
+                    <li class="list-footer-item"><a href='#'>Environnement</a></li>
+                  </ul>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                  <ul class="list-footer">
+                    <li class="list-footer-item"><a href='#'>Droits économiques, sociaux et culturels</li>
+                    <li class="list-footer-item"><a href='#'>Free Speech</li>
+                    <li class="list-footer-item"><a href='#'>Santé</li>
+                    <li class="list-footer-item"><a href='#'>Justice internationale</li>
+                    <li class="list-footer-item"><a href='#'>Droits LGBT</li>
+                    <li class="list-footer-item"><a href='#'>Drois des migrants</li>
+
+                  </ul>
+                  </div>
+                  <div class="col-xs-6 col-md-4">
+                  <ul class="list-footer">
+                    <li class="list-footer-item"><a href='#'>Réfugiés</a></li>
+                    <li class="list-footer-item"><a href='#'>Terrorisme</a></li>
+                    <li class="list-footer-item"><a href='#'>Torture</a></li>
+                    <li class="list-footer-item"><a href='#'>Nation Unies</a></li>
+                    <li class="list-footer-item"><a href='#'>Droits des femmes</a></li>
+
+                  </ul>
+                  </div>
+                  </div>
+            </footer>
+                <p class="copyright">© Copyright 2014, Human Rights Watch</p>
         <script src="../js/vendors.min.js"></script>
         <script src="../js/main.min.js"></script>
     </body>
